# ai-python-project-template

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  copier.yml  justfile  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  definition-of-done.md  development-standards.md
docs/decisions/: 0001-use-uv.md  0002-use-src-layout.md
src/ai_python_project_template/: __init__.py  __main__.py
template/: CHANGELOG.md.jinja  CONTRIBUTING.md.jinja  README.md.jinja  justfile  pyproject.toml.jinja
template/.github/: dependabot.yml
template/docs/: architecture.md.jinja  definition-of-done.md.jinja  development-standards.md.jinja
template/docs/decisions/: 0001-use-uv.md.jinja  0002-use-src-layout.md.jinja
template/src/{{ package_name }}/: __main__.py.jinja
template/tests/unit/: test_main.py.jinja  test_version.py.jinja
tests/unit/: test_main.py  test_version.py
