[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-python-project-template"
version = "0.1.0"
description = "Production-ready Python AI project template and reusable engineering workspace."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "David Arpasi" }
]
dependencies = []

[project.scripts]
ai-python-project-template = "ai_python_project_template.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_python_project_template"]

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
]

[tool.basedpyright]
include = ["src", "tests"]
exclude = [".venv"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
